--- a/src/pages/dashboard/Dashboard.css
+++ b/src/pages/dashboard/Dashboard.css
@@ -1,15 +1,20 @@
 .dashboard {
   padding: 10px;
-}
-.cards {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-  gap: 20px;
+  grid-template-columns: repeat(12, minmax(0, 1fr));
+  grid-template-rows: repeat(12, minmax(0, 1fr));
+  gap: 10px;
 }
-.dashboard .card {
+.dashboard > * {
+  grid-column: span 4 / span 4;
+}
+.dashboard .card,
+.dashboard .order {
   background: #fff;
   border-radius: 12px;
   padding: 10px;
+  display: flex;
+  flex-direction: column;
 }
 .dashboard .card-head {
   display: flex;
@@ -17,10 +22,11 @@
   justify-content: space-between;
 }
 .dashboard .card-body {
-  margin-top: 24px;
+  padding-top: 24px;
   display: flex;
   align-items: center;
   gap: 20px;
+  margin-top: auto;
 }
 .dashboard .card-body div {
   margin-right: auto;
@@ -28,10 +34,14 @@
 .dashboard .card h3 {
   font-weight: 600;
   color: var(--black-60);
+  display: inline-block;
+  margin-right: 5px;
+  /* font-size: 20px; */
 }
 .dashboard .card p,
 .dashboard .card small {
   color: var(--black-10);
+  font-size: 13px;
 }
 .dashboard .card svg {
   padding: 5px;
@@ -40,4 +50,11 @@
 }
 .dashboard .card small.action {
   color: #519c66;
+}
+.dashboard .doughnut {
+  grid-row: 2/4;
+}
+.dashboard .card-5 {
+  grid-row: 3 / 4;
+  grid-column: 5 / 9;
 }
