--- a/src/pages/dashboard/Dashboard.css
+++ b/src/pages/dashboard/Dashboard.css
@@ -2,7 +2,7 @@
   padding: 10px;
   display: grid;
   grid-template-columns: repeat(12, minmax(0, 1fr));
-  grid-template-rows: repeat(12, minmax(0, 1fr));
+  /* grid-template-rows: repeat(6, minmax(0, 1fr)); */
   gap: 10px;
 }
 .dashboard > * {
