--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@
 
 body {
   background: var(--smoke);
+  font-size: 0.8rem;
 }
 
 a {
@@ -26,4 +27,22 @@ a {
 }
 li {
   list-style: none;
+}
+.btn {
+  display: flex;
+  padding: 16px 20px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  border-radius: 12px;
+  transition: all 0.3s ease;
+  background: var(--primary);
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  border: 1px solid var(--primary);
+}
+.btn:hover {
+  background: none;
+  color: var(--primary);
 }
