--- a/src/pages/dashboard/Dashboard.css
+++ b/src/pages/dashboard/Dashboard.css
@@ -68,6 +68,7 @@
 }
 .dashboard .order .date {
   color: var(--black-10);
+  font-size: 13px;
 }
 .dashboard .order .status {
   background: var(--smoke);
