--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,14 @@
 .App .container {
   width: 100%;
 }
+@media (max-width: 512px) {
+  .overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 11;
+  }
+}
