--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -23,3 +23,10 @@
 .navbar .navigations {
   padding: 0 10px;
 }
+.navbar .hamburger {
+  padding: 5px 7px;
+  background: #5570f11f;
+  border-radius: 4px;
+  border: none;
+  cursor: pointer;
+}
