--- a/src/components/sidebar/Sidebar.css
+++ b/src/components/sidebar/Sidebar.css
@@ -25,6 +25,7 @@
   gap: 10px;
   border-radius: 12px;
   transition: all 0.3s ease;
+  margin: 5px 0;
 }
 .sidebar li a.active {
   background: var(--primary);
@@ -36,4 +37,34 @@
 }
 .sidebar .info {
   margin-top: auto;
+}
+@media (max-width: 1200px) {
+  .sidebar {
+    width: fit-content;
+    padding: 8px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .sidebar li a span:nth-child(2),
+  .sidebar .logo span {
+    display: none;
+  }
+}
+@media (max-width: 512px) {
+  .sidebar {
+    position: fixed;
+    z-index: 12;
+    top: 0;
+    left: 0;
+    width: fit-content;
+    height: 100vh;
+    box-shadow: 5px 5px 15px #64666c;
+    padding: 24px;
+    align-items: flex-start;
+  }
+  .sidebar li a span:nth-child(2),
+  .sidebar .logo span {
+    display: initial;
+  }
 }
