--- a/src/pages/dashboard/Dashboard.css
+++ b/src/pages/dashboard/Dashboard.css
@@ -72,6 +72,7 @@
   text-align: center;
   padding: 2px 10px;
   border-radius: 8px;
+  font-size: 13px;
 }
 .dashboard .doughnut {
   grid-row: 2/4;
