--- a/src/pages/chats/Chat.css
+++ b/src/pages/chats/Chat.css
@@ -36,6 +36,9 @@
   border-bottom: 1px solid var(--smoke);
   padding: 15px 0;
 }
+.chats li > div:last-of-type {
+  margin-left: auto;
+}
 .chats li .name {
   font-weight: bold;
 }
@@ -153,4 +156,23 @@
 .seachbar-input-div i {
   color: var(--black);
   font-size: 1.2rem;
+}
+@media (max-width: 965px) {
+  .conversations .main {
+    flex-direction: column;
+  }
+  .chats {
+    width: 100%;
+  }
+}
+@media (max-width: 512px) {
+  .user-details {
+    flex-direction: column;
+  }
+  .user-details .summary {
+    justify-content: center;
+  }
+  .user-details div:last-of-type {
+    margin-left: 0;
+  }
 }
