--- a/src/pages/chats/Chat.css
+++ b/src/pages/chats/Chat.css
@@ -128,6 +128,7 @@
   border-radius: 16px 16px 16px 0;
   color: #fff;
   width: max-content;
+  max-width: 350px;
 }
 /* search bar  */
 .seachbar-input-div {
