--- a/src/pages/chats/Chat.css
+++ b/src/pages/chats/Chat.css
@@ -107,6 +107,17 @@
   display: flex;
   flex-direction: column;
 }
+.message-content p {
+  padding: 16px 20px;
+  background: var(--primary);
+  border-radius: 16px 16px 16px 0;
+  color: #fff;
+  width: fit-content;
+  max-width: 350px;
+}
+.message-content small {
+  margin-top: 5px;
+}
 .message-content.owner {
   align-items: flex-end;
 }
@@ -124,14 +135,6 @@
   text-align: center;
   /* align-items: center;
   justify-content: center; */
-}
-.message-content p {
-  padding: 16px 20px;
-  background: var(--primary);
-  border-radius: 16px 16px 16px 0;
-  color: #fff;
-  width: max-content;
-  max-width: 350px;
 }
 /* search bar  */
 .seachbar-input-div {
