working on chats

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@
 
 :root {
   --primary: #5570f1;
+  --secondary: #ffead1;
+  --black-100: #1c1d22;
   --black-60: #45464e;
   --black-50: #53545c;
   --black-30: #8b8d97;
