--- a/src/components/sidebar/Sidebar.css
+++ b/src/components/sidebar/Sidebar.css
@@ -39,6 +39,7 @@
   margin-top: auto;
 }
 .sidebar .info li a {
+  margin: 10px 0;
   padding: 8px 16px;
 }
 .sidebar .info span {
@@ -61,6 +62,7 @@
   background: none;
 }
 .sidebar .info li:nth-child(3) a {
+  margin-top: 20px;
   color: #cc5f5f;
 }
 .sidebar .info li:nth-child(3) a:hover {
