--- a/src/components/sidebar/Sidebar.css
+++ b/src/components/sidebar/Sidebar.css
@@ -35,6 +35,18 @@
   background: var(--smoke);
   color: var(--black-50);
 }
+.sidebar li a {
+  position: relative;
+}
+.sidebar li a small {
+  background: var(--secondary);
+  width: 20px;
+  height: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+}
 .sidebar .info {
   margin-top: auto;
 }
@@ -82,6 +94,11 @@
   .sidebar .logo span {
     display: none;
   }
+  .sidebar li a small {
+    top: 3px;
+    right: 8px;
+    position: absolute;
+  }
 }
 @media (max-width: 612px) {
   .sidebar {
@@ -98,5 +115,8 @@
   .sidebar li a span:nth-child(2),
   .sidebar .logo span {
     display: initial;
+  }
+  .sidebar li a small {
+    position: initial;
   }
 }
